tests/ui/coherence/coherence-vec-local.stderr
error[E0119]: conflicting implementations of trait `Remote` for type `Vec<Local>`
  --> $DIR/coherence-vec-local.rs:8:1
   |
LL | impl Remote for Vec<Local> { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `coherence_concrete_lib`:
           - impl<T> Remote for Vec<T>
             where T: Clone;

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
